--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18"
+    "@astrojs/tailwind": "^3.1.0",
+    "astro": "^2.1.2",
+    "astro-icon": "^0.8.0",
+    "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4"
   }
 }
