--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.1.0",
+    "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "astro": "^2.1.2",
     "astro-icon": "^0.8.0",
+    "framer-motion": "^10.12.4",
+    "preact": "^10.13.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4"
   }
