--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@astrojs/preact": "^2.1.0",
+    "@astrojs/markdown-component": "^1.0.3",
+    "@astropub/md": "^0.2.0",
     "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.0",
+    "@astrojs/sitemap": "^1.2.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "astro": "^2.1.2",
@@ -21,7 +24,8 @@
     "preact": "^10.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
